objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Audience_Detail__c</fullName>
        <label>Audience Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Audience__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>ISV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Partner - ISV</fullName>
                    <isActive>false</isActive>
                    <label>Partner - ISV</label>
                </value>
                <value>
                    <fullName>Partner - SI</fullName>
                    <isActive>false</isActive>
                    <label>Partner - SI</label>
                </value>
                <value>
                    <fullName>Partner - Salesforce</fullName>
                    <isActive>false</isActive>
                    <label>Partner - Salesforce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Set the number of seats available for a session. 0 means unlimited capacity.</description>
        <inlineHelpText>Set the number of seats available for a session. 0 means unlimited capacity.</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Marketing_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Marketing Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Assignment__c</fullName>
        <inlineHelpText>If left blank the default will be 100.</inlineHelpText>
        <label>Credit Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>Enter the 4 digit fiscal year (e.g 2022, 2023...)</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Short description or name of campaign that will show in the title.  I.e. FINS Security Roundtable; 2021 State of Salesforce DevOps report; Partner Webinar - Using data deploy</inlineHelpText>
        <label>Campaign Display Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All - ALL</fullName>
                </value>
                <value>
                    <fullName>Copado - COP</fullName>
                </value>
                <value>
                    <fullName>Copado Essentials - CE</fullName>
                </value>
                <value>
                    <fullName>Copado Robotic Testing - CRT</fullName>
                </value>
                <value>
                    <fullName>Compliance Hub - CCH</fullName>
                </value>
                <value>
                    <fullName>Value Stream Mapping - VSM</fullName>
                </value>
                <value>
                    <fullName>Copado Analytics - CA</fullName>
                </value>
                <value>
                    <fullName>Copado Version Control - CVC</fullName>
                </value>
                <value>
                    <fullName>Copado Security Planning - CSP</fullName>
                    <isActive>false</isActive>
                    <label>Copado Security Planning - CSP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Select the Region. Use GLB for campaigns with no specific region</inlineHelpText>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GLB</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                    <isActive>false</isActive>
                    <label>ANZ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAL_Target__c</fullName>
        <description>SAL Target used for Alliances team to track</description>
        <inlineHelpText>Field captures the planned number of opportunities (Sales Accepted Leads--SALs) sourced from this campaign. To associate opportunities with this campaign, mark this contact as Primary Contact in opportunity Contact Role.</inlineHelpText>
        <label>SAL Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIGSTR__SigstrSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SigstrSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Advisory Board</fullName>
                </value>
                <value>
                    <fullName>Roundtable</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Field Event</fullName>
                </value>
                <value>
                    <fullName>Virtual Summit</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Pardot Nurture</fullName>
                </value>
                <value>
                    <fullName>List Email</fullName>
                </value>
                <value>
                    <fullName>Conversica Outbound Nurture</fullName>
                </value>
                <value>
                    <fullName>Display Ad</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Paid Social</fullName>
                </value>
                <value>
                    <fullName>Organic Social</fullName>
                </value>
                <value>
                    <fullName>Sales Outbound</fullName>
                </value>
                <value>
                    <fullName>BDR Outbound</fullName>
                </value>
                <value>
                    <fullName>CSM Outbound</fullName>
                </value>
                <value>
                    <fullName>Chat Bot</fullName>
                </value>
                <value>
                    <fullName>Form Fill</fullName>
                </value>
                <value>
                    <fullName>Gated Content</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>No Contact - Nurture</fullName>
                </value>
                <value>
                    <fullName>Point in Time</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>AE Outbound</fullName>
                </value>
                <value>
                    <fullName>Alliances Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <inlineHelpText>When will campaign take place. EG stands for evergreen or ongoing campaigns. Use Quarters for point in time campaigns.</inlineHelpText>
        <label>Timeframe</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>EG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Verticals</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Retail/CG/TTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lnt__Budget_Counter__c</fullName>
        <label>Gift Budget Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Limit__c</fullName>
        <label>Gift Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Counter__c</fullName>
        <label>Gift Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Number_Limit__c</fullName>
        <label>Gift Number Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Field Event,Partner Campaign,Partners,Training and Certification,Virtual Event,Webinar</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Hakki</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>DevOps_260_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>devops 360</value>
        </filters>
        <label>DevOps 360 Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Sales_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>CI/CD Value</value>
        </filters>
        <label>Sales Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Salesforce</value>
        </filters>
        <label>Salesforce Campaigns</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Start_and_End_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISPICKVAL( Type ,&quot;Conference - CNF&quot;),ISPICKVAL( Type ,&quot;Event - EVT&quot;),ISPICKVAL( Type ,&quot;Webinar - WBN&quot;) ), OR(ISBLANK( StartDate ),ISBLANK( EndDate) ))</errorConditionFormula>
        <errorMessage>Please Enter Start Date and End Date</errorMessage>
    </validationRules>
</CustomObject>